--- a/Server/telegram/package.json
+++ b/Server/telegram/package.json
@@ -10,6 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
+    "multer": "^1.4.5-lts.1",
+    "node-telegram-bot-api": "^0.64.0",
     "telegraf": "^4.15.0"
   }
 }
