--- a/.gitignore
+++ b/.gitignore
@@ -280,3 +280,8 @@ dist
 .svelte-kit
 
 # End of https://www.toptal.com/developers/gitignore/api/java,intellij,node
+# Ignore Gradle project-specific cache directory
+.gradle
+
+# Ignore Gradle build output directory
+build
