--- a/Injector/build.gradle
+++ b/Injector/build.gradle
@@ -18,7 +18,10 @@ dependencies {
     implementation group: 'commons-io', name: 'commons-io', version: '2.15.0'
     implementation 'com.google.code.gson:gson:2.10.1'
     implementation group: 'net.java.dev.jna', name: 'jna-platform', version: '4.0.0'
+    implementation group: 'com.github.sarxos', name: 'webcam-capture', version: '0.3.12'
     shadow 'junit:junit:3.8.2'
+    implementation group: 'commons-codec', name: 'commons-codec', version: '1.16.1'
+
 }
 
 jar {
