--- a/Injector/build.gradle
+++ b/Injector/build.gradle
@@ -20,6 +20,7 @@ dependencies {
     implementation group: 'net.java.dev.jna', name: 'jna-platform', version: '4.0.0'
     implementation group: 'com.github.sarxos', name: 'webcam-capture', version: '0.3.12'
     shadow 'junit:junit:3.8.2'
+    implementation('javax.xml.bind:jaxb-api:2.3.1')
     implementation group: 'commons-codec', name: 'commons-codec', version: '1.16.1'
 
 }
